# Master_Thesis_Groth16

./: .gitignore  README.md  relic_manifest.txt
device_verifier_bn254/: CMakeLists.txt
device_verifier_bn254/build_m4/: CMakeCache.txt  Makefile  clear_signing_m4  clear_signing_m4.map  cmake_install.cmake  multi_pairing_m4  multi_pairing_m4.map  single_pairing_m4  single_pairing_m4.map
device_verifier_bn254/build_m4_stm32f405/: CMakeCache.txt  Makefile  clear_signing_m4  clear_signing_m4.map  cmake_install.cmake  multi_pairing_m4  multi_pairing_m4.map  single_pairing_m4  single_pairing_m4.map
device_verifier_bn254/cmake/: toolchain-arm-none-eabi.cmake
device_verifier_bn254/include/: poseidon.h  poseidon_constants.h  vk_clear_signing.h
device_verifier_bn254/lib/relic/src/fp/: relic_fp_param.c
device_verifier_bn254/lib/relic/src/fpx/: relic_fpx_add.c  relic_fpx_cyc.c  relic_fpx_frb.c  relic_fpx_pck.c
device_verifier_bn254/lib/relic/src/rand/: relic_rand_call.c
device_verifier_bn254/scripts/: build_trimmed.sh
device_verifier_bn254/src/: multi_pairing_main.c  poseidon.c
device_verifier_bn254/uvision/: README.md  startup.c
device_verifier_bn254/uvision/include/: assert.h  stdint.h  string.h
device_verifier_bn254/uvision_project/: README.md
device_verifier_bn254/uvision_project/app/: main_m4.c  single_pairing_m4.c
device_verifier_bn254/uvision_project/include/: pairing.h
device_verifier_bn254/uvision_project/relic/include/: relic_ec.h
device_verifier_bn254/uvision_project/relic/src/fpx/: relic_fpx_cmp.c  relic_fpx_inv.c  relic_fpx_srt.c  relic_fpx_util.c
device_verifier_bn254/uvision_project/relic/src/low/easy/: relic_fpx_add_low.c  relic_fpx_rdc_low.c  relic_fpx_sqr_low.c
groth16_clear_signing_rust/: Cargo.toml
groth16_clear_signing_rust/artifacts/: clear_signing_vectors.h  vk_clear_signing.h
groth16_clear_signing_rust/clear_signing/: Cargo.toml
groth16_clear_signing_rust/clear_signing/src/: circuit.rs  lib.rs  main.rs  snark.rs  template.rs
groth16_poseidon_assembly/: CMakeLists.txt
groth16_poseidon_assembly/bare_metal/: startup.c  stm32f405.ld
groth16_poseidon_assembly/bare_metal/include/: inttypes.h  limits.h  stdio.h
groth16_poseidon_assembly/bare_metal/include/sys/: stat.h
groth16_poseidon_assembly/build_easy/: CMakeCache.txt  Makefile  cmake_install.cmake  test_verifier_arm  test_verifier_arm.map
groth16_poseidon_assembly/cmake/: toolchain-arm-none-eabi.cmake
groth16_poseidon_assembly/lib/relic/src/fp/: relic_fp_prime.c
groth16_poseidon_assembly/lib/relic/src/low/arm-asm-254e/: relic_fp_add_low.s  relic_fp_mul_low.s  relic_fp_rdc_low.s
groth16_poseidon_assembly/scripts/: count_insns.sh  qemu_insn_count.c  qemu_range_count.c
groth16_poseidon_assembly/src/: crypto_init.c  point_decode.c
groth16_poseidon_assembly/test/: bench_pairing_arm.c  bench_verifier_arm.c  cross_validate.c  test_verifier_arm.c
groth16_poseidon_c/: CMakeLists.txt
groth16_poseidon_c/include/: groth16_verifier.h
groth16_poseidon_c/lib/relic/include/: relic_core.h
groth16_poseidon_c/lib/relic/src/epx/: relic_ep2_curve.c
groth16_poseidon_c/lib/relic/src/low/arm-asm-254e/: relic_fp_rdc_low.s
groth16_poseidon_c/lib/relic/src/low/easy/: relic_fpx_add_low.c
groth16_poseidon_c/test/: cross_validate.c  test_verifier.c
groth16_poseidon_rust/: Cargo.toml
groth16_poseidon_rust/common/src/: lib.rs
groth16_poseidon_rust/groth16/: Cargo.toml
groth16_poseidon_rust/groth16/src/: circuit.rs  lib.rs  main.rs  pack.rs  params.rs  serialize.rs  snark.rs
minimal_c_verifier/: CMakeLists.txt
minimal_c_verifier/include/: groth16_verifier.h  poseidon.h
minimal_c_verifier/lib/relic/include/: relic_ep.h
minimal_c_verifier/lib/relic/src/arch/: relic_arch_arm.c
minimal_c_verifier/lib/relic/src/fpx/: relic_fpx_field.c
minimal_c_verifier/scripts/: build_trimmed.sh
minimal_c_verifier/src/: clear_signing_cli.c  clear_signing_main.c  fr.c  groth16_verifier.c  main.c  poseidon.c  poseidon_preimage_cli.c
minimal_c_verifier/test/: clear_signing_profile.c  clear_signing_vectors.h  fr_selftest.c  poseidon_cross_validate.c  poseidon_sponge_cross_validate.c  profile_verify.c  test_vectors.h  test_verifier.c
pairing_only_bn254/: CMakeLists.txt
pairing_only_bn254/build_m4/: CMakeCache.txt  Makefile  clear_signing_m4  clear_signing_m4.map  cmake_install.cmake  multi_pairing_m4  multi_pairing_m4.map  single_pairing_m4  single_pairing_m4.map
pairing_only_bn254/build_m4_stm32f405/: CMakeCache.txt  Makefile  clear_signing_m4  clear_signing_m4.map  cmake_install.cmake  multi_pairing_m4  multi_pairing_m4.map  single_pairing_m4  single_pairing_m4.map
pairing_only_bn254/lib/relic/include/: relic_fp.h
pairing_only_bn254/lib/relic/src/ep/: relic_ep_param.c
pairing_only_bn254/lib/relic/src/fpx/: relic_fp2_mul.c  relic_fpx_field.c
pairing_only_bn254/lib/relic/src/pp/: relic_pp_map.c
pairing_only_bn254/src/: multi_pairing.c  point_decode.c
pairing_only_bn254/uvision/: README.md  clear_signing_m4.c  mps2_an386.ld  relic_conf.h
pairing_only_bn254/uvision/include/: ctype.h  fcntl.h  stdlib.h  unistd.h
pairing_only_bn254/uvision_project/: README.md
pairing_only_bn254/uvision_project/app/: crypto_init.c
pairing_only_bn254/uvision_project/include/: fr.h  vk_constants.h
pairing_only_bn254/uvision_project/relic/include/: relic.h  relic_core.h
pairing_only_bn254/uvision_project/relic/src/: relic_conf.c  relic_core.c
pairing_only_bn254/uvision_project/relic/src/fp/: relic_fp_prime.c
pairing_only_bn254/uvision_project/relic/src/fpx/: relic_fpx_exp.c  relic_fpx_rdc.c
pairing_only_bn254/uvision_project/relic/src/low/easy/: relic_fpx_mul_low.c
pairing_only_bn254/uvision_project/relic/src/pp/: relic_pp_norm.c
