[package]
name = "poseidon-preimage-groth16"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poseidon-preimage-groth16"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
ark-std = "0.5"
ark-ff = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-groth16 = "0.5"
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-serialize = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge", "r1cs"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }

